[project]
name = "cv-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.1",
    "einops>=0.8.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "torchtext==0.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]
